# rust-to-do

./: .gitignore  Cargo.toml  README.md
src/: main.rs  storage.rs  task.rs
src/commands/: add_task.rs  clean_completed.rs  commands.rs  complete_task.rs  delete_task.rs  list_tasks.rs  mod.rs  uncomplete_task.rs
